--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 jQuery(document).ready(function($) {
 	$(".mouse li").potatoMouse({
 		div_Element: ".mouse li",
-		speed: 300 //图片覆盖速度,默认200ms.
+		speed: 300 //picture cover speed,default:200ms.
 	});
 
 });
