--- a/index.html
+++ b/index.html
@@ -10,33 +10,23 @@
 		<ul>
 			<li>
 				<div class="show">no.1</div>
-				<div class="cover">
-					no.1
-				</div>
+				<div class="cover">no.1</div>
 			</li>
 			<li>
 				<div class="show">no.2</div>
-				<div class="cover">
-					no.2
-				</div>
+				<div class="cover">no.2</div>
 			</li>
 			<li>
 				<div class="show">no.3</div>
-				<div class="cover">
-					no.3
-				</div>
+				<div class="cover">no.3</div>
 			</li>
 			<li>
 				<div class="show">no.4</div>
-				<div class="cover">
-					no.4
-				</div>
+				<div class="cover">no.4</div>
 			</li>
 			<li>
 				<div class="show">no.5</div>
-				<div class="cover">
-					no.5
-				</div>
+				<div class="cover">no.5</div>
 			</li>
 		</ul>
 	</div>
