--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>potatoMousecover</title>
 </head>
-<link rel="stylesheet" href="./css/jq-potatoMousecover.css" />
+<link rel="stylesheet" href="jqPotatoMousecover.css" />
 <body>
 	<div class="mouse">
 		<ul>
@@ -31,8 +31,8 @@
 		</ul>
 	</div>
 </body>
-<script src="./js/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script src="./js/jq-potatoMousecover.js" type="text/javascript"></script>
+<script src="jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="jqPotatoMousecover.js" type="text/javascript"></script>
 <script type="text/javascript">
 jQuery(document).ready(function($) {
 	$(".mouse li").potatoMouse({
