--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</ul>
 	</div>
 </body>
-<script src="jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="http://lib.sinaapp.com/js/jquery/1.10.2/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="jqPotatoMousecover.js" type="text/javascript"></script>
 <script type="text/javascript">
 jQuery(document).ready(function($) {
